fix strong + prediction title trans

--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -85,6 +85,8 @@
     },
     "predictionResult": {
       "processingTitle": "Επεξεργασία...",
+      "note": "Σημαντική σημείωση:",
+      "result": "Αποτελέσματα",
       "resultModal": "Αυτή η εφαρμογή δεν μπορεί να προβλέψει την κατάσταση του COVID-19 ή να διαγνώσει οποιαδήποτε ασθένεια, διαταραχή ή άλλη κατάσταση υγείας. Η Virufy διεξάγει έρευνα και θα χρησιμοποιήσει τις πληροφορίες που παρέχετε μόνο για την έρευνα αυτή. Το Virufy δεν θα αντικαταστήσει έναν γιατρό και θα ήθελε να σας υπενθυμίσει ότι είναι δική σας ευθύνη να ζητάτε ιατρική συμβουλή από τον γιατρό σας.",
       "resultNotDetected": "COVID-19: ΔΕΝ ΕΝΤΟΠΙΖΕΤΑΙ",
       "resultNotDetectedText": "Η φωνή σας δεν φαίνεται να έχει δείκτες COVID-19. Παρακαλούμε <strong>συνεχίστε να λαμβάνετε τα κατάλληλα μέτρα</strong> βάσει των συμβουλών του επαγγελματία υγείας σας ή του αρμόδιου ρυθμιστικού φορέα και επανεκτιμήστε τον εαυτό σας στην εφαρμογή μας καθημερινά.",
