--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -27,14 +27,14 @@
   },
   "beforeStart": {
     "title": "最後に、始める前に...",
-        "subtitle": "<strong>安全性を確保するために、次のことをお勧めします：</strong>。",
-        "advise_list": [
-            "ご自身の機器を使用し、必要に応じてマスクを着用してください。",
-            "咳や話し声を録音した後は、デバイスとその周辺の表面を消毒してください。",
-            "咳のリスクを高める基礎疾患をお持ちの方は、参加する前に医療従事者に確認してください。",
-            "症状が悪化していると感じた場合は、お近くの医療機関にご相談ください。"
-        ],
-        "startButton": "次へ"
+    "subtitle": "<strong>安全性を確保するために、次のことをお勧めします：</strong>。",
+    "advise_list": [
+        "ご自身の機器を使用し、必要に応じてマスクを着用してください。",
+        "咳や話し声を録音した後は、デバイスとその周辺の表面を消毒してください。",
+        "咳のリスクを高める基礎疾患をお持ちの方は、参加する前に医療従事者に確認してください。",
+        "症状が悪化していると感じた場合は、お近くの医療機関にご相談ください。"
+    ],
+    "startButton": "次へ"
   },
   "recordingsIntroduction": {
     "recordCough": {
@@ -85,6 +85,8 @@
   },
   "predictionResult": {
     "processingTitle": "加工...",
+    "note": "重要な注意点：",
+    "result": "結果",
     "resultModal": "本アプリは、COVID-19の状態を予測したり、病気や障害、その他の健康状態を診断するものではありません。Virufyは研究を行っており、提供された情報はその研究のためにのみ使用されます。また、Virufyは医師の代わりにはなりませんので、医師の診断を受けるのはご自身の責任であることをご理解ください。",
     "resultNotDetected": "COVID-19: 検出されず",
     "resultNotDetectedText": "あなたの声にはCOVID-19の指標がないようです。 医療専門家や該当する規制機関のアドバイスに基づいて、<strong>適切な対策を継続し、日々アプリで自分自身を見つめ直してください</strong>",
