--- a/src/locales/mn.json
+++ b/src/locales/mn.json
@@ -85,6 +85,8 @@
     },
     "predictionResult": {
       "processingTitle": "Боловсруулж байна...",
+      "note": "Чухал тэмдэглэл:",
+      "result": "Үр дүн",
       "resultModal": "Энэ апп нь таны COVID-19-ын төлөвийг урьдчилан таамаглахгүй, ямар нэгэн өвчин, эмгэг, эрүүл мэндийн бусад байдлыг оношлохгүй. Virufy судалгаа хийж байгаа бөгөөд таны өгсөн мэдээллийг зөвхөн тухайн судалгаанд ашиглах болно. Вируфи нь эмчийн оронд ажиллахгүй бөгөөд эмчээсээ эмнэлгийн зөвлөгөө авах нь таны үүрэг гэдгийг танд сануулмаар байна.",
       "resultNotDetected": "COVID-19: ИЛРҮҮЛГЭЭГҮЙ",
       "resultNotDetectedText": "Таны хоолойд COVID-19-ийн шинж тэмдэг байхгүй бололтой. Эрүүл мэндийн мэргэжилтэн эсвэл холбогдох зохицуулах байгууллагын зөвлөгөөнд үндэслэн <strong>зохих арга хэмжээг үргэлжлүүлэн авч</strong> өдөр бүр манай аппликейшн дээр өөрийгөө дахин үнэлнэ үү.",
