--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -85,6 +85,8 @@
     },
     "predictionResult": {
       "processingTitle": "প্রক্রিয়াকরণ...",
+      "note": "গুরুত্বপূর্ণ তথ্য:",
+      "result": "ফলাফল",
       "resultModal": "এই অ্যাপটি আপনার COVID-19 স্থিতির পূর্বাভাস দেবে না বা কোনও রোগ, ব্যাধি বা অন্যান্য স্বাস্থ্যের অবস্থা নির্ণয় করবে না। Virufy গবেষণা পরিচালনা করছে এবং শুধুমাত্র সেই গবেষণার জন্য আপনার দেওয়া তথ্য ব্যবহার করবে। Virufy একজন ডাক্তারের জায়গা নেবে না এবং আপনাকে মনে করিয়ে দিতে চাই যে আপনার ডাক্তারের কাছ থেকে চিকিৎসার পরামর্শ নেওয়া আপনার দায়িত্ব।",
       "resultNotDetected": "COVID এর: সনাক্ত করা হয়নি",
       "resultNotDetectedText": "আপনার কণ্ঠস্বরে COVID এর সূচক আছে বলে মনে হচ্ছে না। <strong> অনুগ্রহ করে আপনার স্বাস্থ্যসেবা </strong>পেশাদার বা প্রযোজ্য নিয়ন্ত্রক সংস্থার পরামর্শের ভিত্তিতে যথাযথ ব্যবস্থা গ্রহণ করা চালিয়ে যান এবং প্রতিদিন আমাদের অ্যাপে নিজেকে পুনরায় মূল্যায়ন করুন।",
