--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -86,6 +86,8 @@
   },
   "predictionResult": {
     "processingTitle": "प्रसंस्करण...",
+    "note": "महत्वपूर्ण लेख:",
+    "result": "परिणाम",
     "resultModal": "यह ऐप आपकी कोविड -19 स्थिति की भविष्यवाणी नहीं करेगा या किसी बीमारी, विकार या अन्य स्वास्थ्य स्थिति का निदान नहीं करेगा। विरुफी अनुसंधान कर रहा है और आपके द्वारा प्रदान की गई जानकारी का उपयोग केवल उस शोध के लिए करेगा। विरुफी एक डॉक्टर की जगह नहीं लेगा और आपको याद दिलाना चाहूंगा कि अपने डॉक्टर से चिकित्सा सलाह लेना आपकी जिम्मेदारी है।",
     "resultNotDetected": "कोविड -19: पता नहीं चला",
     "resultNotDetectedText": " ऐसा लगता है कि आपकी आवाज़ में कोविड-19 के संकेतक नहीं हैं। कृपया अपने स्वास्थ्य देखभाल पेशेवर या लागू नियामक निकाय की सलाह के आधार पर <strong>उचित उपाय करना जारी रखें</strong> और प्रतिदिन हमारे ऐप में अपना पुनर्मूल्यांकन करें।",
