--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -85,6 +85,8 @@
     },
     "predictionResult": {
       "processingTitle": "กำลังประมวลผล...",
+      "note": "โน๊ตสำคัญ:",
+      "result": "ผลลัพธ์",
       "resultModal": "แอปนี้จะไม่ทำนายสถานะ COVID-19 ของคุณหรือวินิจฉัยโรค ความผิดปกติ หรือภาวะสุขภาพอื่นๆ Virufy กำลังทำการวิจัยและจะใช้ข้อมูลที่คุณให้ไว้สำหรับการวิจัยนั้นเท่านั้น Virufy จะไม่เกิดขึ้นกับแพทย์และต้องการเตือนคุณว่าเป็นความรับผิดชอบของคุณในการขอคำแนะนำทางการแพทย์จากแพทย์ของคุณ",
       "resultNotDetected": "โควิด-19: ตรวจไม่พบ",
       "resultNotDetectedText": "เสียงของคุณดูเหมือนจะไม่มีตัวบ่งชี้ของ COVID-19 โปรด<strong>ดำเนินมาตรการที่เหมาะสมต่อไป</strong>ตามคำแนะนำของบุคลากรทางการแพทย์หรือหน่วยงานกำกับดูแลที่เกี่ยวข้อง และประเมินตนเองในแอปของเราทุกวัน",
