--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -47,6 +47,7 @@
         "stop": "Διακοπή"
       },
       "next": "Επόμενο",
+      "retryButton": "Επανάληψη",
       "releaseButtonStart": "Απελευθερώστε για να ξεκινήσει η εγγραφή",
       "releaseButtonStop": "Αφήστε το για να σταματήσετε την εγγραφή.",
       "shortRecording": "Παρακαλώ κάντε μια εγγραφή τουλάχιστον 5 δευτερολέπτων."
