--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -47,6 +47,7 @@
       "stop": "停止する"
     },
     "next": "次へ",
+    "retryButton": "リトライ",
     "releaseButtonStart": "離すと録音開始",
     "releaseButtonStop": "手を離すと録音が止まります",
     "shortRecording": "最低でも5秒間は録音してください"
