--- a/src/locales/mn.json
+++ b/src/locales/mn.json
@@ -47,6 +47,7 @@
         "stop": "Зогсоох"
       },
       "next": "Дараачийн",
+      "retryButton": "Дахин оролдоно уу",
       "releaseButtonStart": "Бичлэгийг эхлүүлэхийн тулд дарна уу",
       "releaseButtonStop": "Бичлэгийг зогсоохын тулд дарна уу",
       "shortRecording": "Дор хаяж 5 секундын бичлэг хийгээрэй"
