--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -47,6 +47,7 @@
       "stop": "Parar"
     },
     "next": "Próximo",
+    "retryButton": "Tente novamente",
     "releaseButtonStart": "Lançamento para iniciar a gravação",
     "releaseButtonStop": "Liberação para parar a gravação",
     "shortRecording": "Por favor, faça uma gravação de pelo menos 5 segundos"
