--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -47,6 +47,7 @@
         "stop": "หยุด"
       },
       "next": "ต่่อไป",
+      "retryButton": "ลองอีกครั้ง",
       "releaseButtonStart": "ปล่อยเพื่อเริ่มบันทึก",
       "releaseButtonStop": "ปล่อยเพื่อหยุด",
       "shortRecording": "กรุณาบันทึกเสียงของท่านอย่างน้อย 5 วินาที"
