--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -47,6 +47,7 @@
       "stop": "Parar"
     },
     "next": "Siguiente",
+    "retryButton": "Reintentar",
     "releaseButtonStart": "Suelte para empezar a grabar",
     "releaseButtonStop": "Suelte para detener la grabación",
     "shortRecording": "Por favor, haga una grabación de al menos 5 segundos"
