--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -48,6 +48,7 @@
       "stop": "स्र्कें"
     },
     "next": "अगला",
+    "retryButton": "पुन: प्रयास करें",
     "releaseButtonStart": "रिकॉर्डिंग शुरू करने के लिए रिलीज",
     "releaseButtonStop": "रिकॉर्डिंग बंद करने के लिए रिलीज",
     "shortRecording": "कृपया कम से कम 5 सेकंड की रिकॉर्डिंग करें"
