--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -47,6 +47,7 @@
       "stop": "Durdur"
     },
     "next": "Sonraki",
+    "retryButton": "Yeniden deneyin",
     "releaseButtonStart": "Kaydı başlatmak için bırakın",
     "releaseButtonStop": "Kaydı durdurmak için bırakın",
     "shortRecording": "Lütfen en az 5 saniyelik bir kayıt yapın"
