minimum recording time to 3 VIR-291

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -50,7 +50,7 @@
       "retryButton": "আবার চেষ্টা করুন",
       "releaseButtonStart": "রেকর্ড শুরু করুন",
       "releaseButtonStop": "রেকর্ড শেষ করুন",
-      "shortRecording": "কমপক্ষে ৫ সেকেন্ডের রেকর্ডিং করুন"
+      "shortRecording": "কমপক্ষে 3 সেকেন্ডের জন্য রেকর্ড করুন"
     },
     "recordingsRecord": {
       "recordCough": {  
