update texts + please note VIR-291

--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -89,13 +89,13 @@
     "processingTitle": "प्रसंस्करण...",
     "note": "महत्वपूर्ण लेख:",
     "result": "परिणाम",
-    "resultModal": "यह ऐप आपकी कोविड -19 स्थिति की भविष्यवाणी नहीं करेगा या किसी बीमारी, विकार या अन्य स्वास्थ्य स्थिति का निदान नहीं करेगा। विरुफी अनुसंधान कर रहा है और आपके द्वारा प्रदान की गई जानकारी का उपयोग केवल उस शोध के लिए करेगा। विरुफी एक डॉक्टर की जगह नहीं लेगा और आपको याद दिलाना चाहूंगा कि अपने डॉक्टर से चिकित्सा सलाह लेना आपकी जिम्मेदारी है।",
+    "resultModal": "Important note: This app will not predict your COVID-19 status or diagnose any disease, disorder, or other health condition. Virufy is conducting research and will use the information you provide for that research only. Virufy will not take place of a doctor and would like to remind you it is your responsibility to seek medical advice from your doctor.",
     "resultNotDetected": "कोविड -19: पता नहीं चला",
     "resultNotDetectedText": " ऐसा लगता है कि आपकी आवाज़ में कोविड-19 के संकेतक नहीं हैं। कृपया अपने स्वास्थ्य देखभाल पेशेवर या लागू नियामक निकाय की सलाह के आधार पर <strong>उचित उपाय करना जारी रखें</strong> और प्रतिदिन हमारे ऐप में अपना पुनर्मूल्यांकन करें।",
     "resultNotAnalyze": "विश्लेषण करने में असमर्थ",
-    "resultNotAnalyzeText": "हमारा एल्गोरिदम आपकी कोविड-19 स्थिति निर्धारित करने में सक्षम नहीं है। कृपया अपने स्वास्थ्य देखभाल पेशेवर या लागू नियामक निकाय की सलाह के आधार पर <strong>उचित उपाय करना जारी रखें</strong> और प्रतिदिन हमारे ऐप में अपना पुनर्मूल्यांकन करें।",
+    "resultNotAnalyzeText": "Our algorithm is not able to determine your COVID-19 status. Please submit another cough.",
     "resultDetected": "कोविड -19: पता चला",
-    "resultDetectedText": "आपकी आवाज में कोविड-19 के संकेतक हैं। कृपया अपने स्वास्थ्य देखभाल पेशेवर से संपर्क करें और अतिरिक्त सावधानी बरतें।",
+    "resultDetectedText": "Your voice has indicators of possible COVID-19. Please contact your healthcare professional and take additional precautions.",
     "likelihoodPrefix": "कोविड -19 परिणाम:",
     "nextButton": "एक और खांसी जमा करें",
     "submitError": "एक त्रुटि पाई गई। कृपया पुन: प्रयास करें।",
