--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -88,13 +88,13 @@
     "processingTitle": "加工...",
     "note": "重要な注意点：",
     "result": "結果",
-    "resultModal": "本アプリは、COVID-19の状態を予測したり、病気や障害、その他の健康状態を診断するものではありません。Virufyは研究を行っており、提供された情報はその研究のためにのみ使用されます。また、Virufyは医師の代わりにはなりませんので、医師の診断を受けるのはご自身の責任であることをご理解ください。",
+    "resultModal": "Important note: This app will not predict your COVID-19 status or diagnose any disease, disorder, or other health condition. Virufy is conducting research and will use the information you provide for that research only. Virufy will not take place of a doctor and would like to remind you it is your responsibility to seek medical advice from your doctor.",
     "resultNotDetected": "COVID-19: 検出されず",
     "resultNotDetectedText": "あなたの声にはCOVID-19の指標がないようです。 医療専門家や該当する規制機関のアドバイスに基づいて、<strong>適切な対策を継続し、日々アプリで自分自身を見つめ直してください</strong>",
     "resultNotAnalyze": "分析できない",
-    "resultNotAnalyzeText": "当社のアルゴリズムでは、あなたのCOVID-19の状態を判断することはできません。 医療専門家や該当する規制機関のアドバイスに基づいて、<strong>適切な対策を継続し、日々アプリで自分自身を見つめ直してください</strong>",
+    "resultNotAnalyzeText": "Our algorithm is not able to determine your COVID-19 status. Please submit another cough.",
     "resultDetected": "COVID-19: 検出された",
-    "resultDetectedText": "あなたの声にCOVID-19の指標があります。医療従事者に連絡し、さらに注意を払ってください。",
+    "resultDetectedText": "Your voice has indicators of possible COVID-19. Please contact your healthcare professional and take additional precautions.",
     "likelihoodPrefix": "COVID-19の結果。",
     "nextButton": "別の咳を送信する",
     "submitError": "エラーが発生しました。もう一度お試しください。",
