--- a/src/locales/mn.json
+++ b/src/locales/mn.json
@@ -88,13 +88,13 @@
       "processingTitle": "Боловсруулж байна...",
       "note": "Чухал тэмдэглэл:",
       "result": "Үр дүн",
-      "resultModal": "Энэ апп нь таны COVID-19-ын төлөвийг урьдчилан таамаглахгүй, ямар нэгэн өвчин, эмгэг, эрүүл мэндийн бусад байдлыг оношлохгүй. Virufy судалгаа хийж байгаа бөгөөд таны өгсөн мэдээллийг зөвхөн тухайн судалгаанд ашиглах болно. Вируфи нь эмчийн оронд ажиллахгүй бөгөөд эмчээсээ эмнэлгийн зөвлөгөө авах нь таны үүрэг гэдгийг танд сануулмаар байна.",
+      "resultModal": "Important note: This app will not predict your COVID-19 status or diagnose any disease, disorder, or other health condition. Virufy is conducting research and will use the information you provide for that research only. Virufy will not take place of a doctor and would like to remind you it is your responsibility to seek medical advice from your doctor.",
       "resultNotDetected": "COVID-19: ИЛРҮҮЛГЭЭГҮЙ",
       "resultNotDetectedText": "Таны хоолойд COVID-19-ийн шинж тэмдэг байхгүй бололтой. Эрүүл мэндийн мэргэжилтэн эсвэл холбогдох зохицуулах байгууллагын зөвлөгөөнд үндэслэн <strong>зохих арга хэмжээг үргэлжлүүлэн авч</strong> өдөр бүр манай аппликейшн дээр өөрийгөө дахин үнэлнэ үү.",
       "resultNotAnalyze": "Шинжилгээ хийх боломжгүй",
-      "resultNotAnalyzeText": "Манай алгоритм таны COVID-19-ын статусыг тодорхойлох боломжгүй байна. Эрүүл мэндийн мэргэжилтэн эсвэл холбогдох зохицуулах байгууллагын зөвлөгөөнд үндэслэн <strong>зохих арга хэмжээг үргэлжлүүлэн авч</strong> өдөр бүр манай аппликейшн дээр өөрийгөө дахин үнэлнэ үү.",
+      "resultNotAnalyzeText": "Our algorithm is not able to determine your COVID-19 status. Please submit another cough.",
       "resultDetected": "COVID-19: ИЛРҮҮЛСЭН",
-      "resultDetectedText": "Таны дуу хоолойд COVID-19-ийн үзүүлэлт байна. Эрүүл мэндийн мэргэжилтэнтэйгээ холбоо барьж, нэмэлт урьдчилан сэргийлэх арга хэмжээ авна уу.",
+      "resultDetectedText": "Your voice has indicators of possible COVID-19. Please contact your healthcare professional and take additional precautions.",
       "likelihoodPrefix": "COVID-19-ын үр дүн:",
       "nextButton": "Өөр ханиалгаж буй бичлэг илгээх",
       "submitError": "Алдаа гарлаа. Дахин оролдоно уу.",
