--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -88,13 +88,13 @@
     "processingTitle": "İşleme...",
     "note": "Önemli Not:",
     "result": "Sonuçlar",
-    "resultModal": "Bu uygulama, COVID-19 durumunuzu tahmin etmeyecek veya herhangi bir hastalık, bozukluk veya diğer sağlık durumunu teşhis etmeyecek. Virufy araştırma yürütüyor ve sağladığınız bilgileri yalnızca bu araştırma için kullanacak. Virufy bir doktorun yerini tutmayacaktır ve doktorunuzdan tıbbi yardım almanın sizin sorumluluğunuzda olduğunu hatırlatmak isteriz.",
+    "resultModal": "Important note: This app will not predict your COVID-19 status or diagnose any disease, disorder, or other health condition. Virufy is conducting research and will use the information you provide for that research only. Virufy will not take place of a doctor and would like to remind you it is your responsibility to seek medical advice from your doctor.",
     "resultNotDetected": "COVID-19: TESPİT EDİLMEDİ",
     "resultNotDetectedText": "Sesinizde COVID-19 belirtileri yok gibi görünüyor. Lütfen sağlık uzmanınızın veya geçerli düzenleyici kurumun tavsiyelerine göre <strong>uygun önlemleri almaya devam edin</strong> ve uygulamamızda her gün kendinizi yeniden değerlendirin.",
     "resultNotAnalyze": "analiz edilemiyor",
-    "resultNotAnalyzeText": "Algoritmamız COVID-19 durumunuzu belirleyemiyor. Lütfen sağlık uzmanınızın veya geçerli düzenleyici kurumun tavsiyelerine göre <strong>uygun önlemleri almaya devam edin</strong> ve uygulamamızda her gün kendinizi yeniden değerlendirin.",
+    "resultNotAnalyzeText": "Our algorithm is not able to determine your COVID-19 status. Please submit another cough.",
     "resultDetected": "COVID-19: TESPİT EDİLDİ",
-    "resultDetectedText": "Sesinizde COVID-19 belirtileri var. Lütfen sağlık uzmanınıza başvurun ve ek önlemler alın.",
+    "resultDetectedText": "Your voice has indicators of possible COVID-19. Please contact your healthcare professional and take additional precautions",
     "likelihoodPrefix": "COVID-19 sonucu:",
     "nextButton": "Başka bir öksürük gönderin",
     "submitError": "Bir hata oluştu. Lütfen tekrar deneyin.",
