--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -88,7 +88,7 @@
     "processingTitle": "加工...",
     "note": "重要な注意点：",
     "result": "結果",
-    "resultModal": "Important note: This app will not predict your COVID-19 status or diagnose any disease, disorder, or other health condition. Virufy is conducting research and will use the information you provide for that research only. Virufy will not take place of a doctor and would like to remind you it is your responsibility to seek medical advice from your doctor.",
+    "resultModal": "<strong>Important note:</strong> This app will not predict your COVID-19 status or diagnose any disease, disorder, or other health condition. Virufy is conducting research and will use the information you provide for that research only. Virufy will not take place of a doctor and would like to remind you it is your responsibility to seek medical advice from your doctor.",
     "resultNotDetected": "COVID-19: 検出されず",
     "resultNotDetectedText": "あなたの声にはCOVID-19の指標がないようです。 医療専門家や該当する規制機関のアドバイスに基づいて、<strong>適切な対策を継続し、日々アプリで自分自身を見つめ直してください</strong>",
     "resultNotAnalyze": "分析できない",
@@ -99,7 +99,9 @@
     "nextButton": "別の咳を送信する",
     "submitError": "エラーが発生しました。もう一度お試しください。",
     "result_positive": "陽性",
-    "result_negative": "陰性"
+    "result_negative": "陰性",
+    "nextSteps": "次のステップ",
+    "noteStatement": "<i>これらの製品に関する記述は、米国食品医薬品局（FDA）によって評価されたものではありません。これらの製品の有効性は、FDAが承認した研究によって確認されたものではありません。これらの製品は、いかなる疾病の診断、治療、治癒または予防を目的としたものではありません。</i>"
   },
   "footerReportProblems": {
     "message": "何か問題がありますか？エラーを報告する"
